--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
 		"start:prod": "node sever.js",
 		"start:dev": "concurrently \"nodemon server.js --ignore client\" \"npm run client\"",
+		"install": "cd client && npm install",
 		"client": "npm start --prefix client",
 		"build": "cd client && npm run build"
 	},
