--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"start:dev": "concurrently \"nodemon server.js --ignore client\" \"npm run client\"",
 		"install": "cd client && npm install",
 		"client": "npm start --prefix client",
-		"build": "cd client && npm run build"
+		"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
 	},
 	"keywords": [],
 	"author": "",
