--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
 	"main": "server.js",
 	"scripts": {
 		"start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
-		"start:prod": "node sever.js",
-		"start:dev": "concurrently \"nodemon server.js --ignore client\" \"npm run client\"",
+		"start:prod": "node server.js",
+		"start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+		"client": "cd client && npm run start",
 		"install": "cd client && npm install",
-		"client": "npm start --prefix client",
-		"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+		"build": "cd client && npm run build",
+		"heroku-postbuild": "npm run build"
 	},
 	"keywords": [],
 	"author": "",
