--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
 	"name": "app",
 	"version": "0.1.0",
 	"private": true,
+	"proxy": "http://localhost:3001",
 	"proxies": {
 		"/api": {
 			"target": "http://localhost:3001",
